;docs(README): update readme, local dev

--- a/ops/.env.example
+++ b/ops/.env.example
@@ -4,11 +4,14 @@ POSTGRES_DB=codex
 POSTGRES_PORT=5432
 
 CODEX_API_PORT=8080
+# Shared by API and workers via ConnectionStrings__Default.
 CODEX_DB_CONNECTION_STRING=Host=postgres;Port=5432;Database=codex;Username=codex;Password=codex
 
 # Local Atlas docs path on host, relative to ops/docker-compose.yml.
 ATLAS_DOCS_HOST_PATH=../docs
+# Atlas mount target in containers. Keep read-only in compose.
 ATLAS_DOCS_CONTAINER_PATH=/atlas
+# Configuration-only docs root consumed by services.
 CODEX_DOCS_ROOT_PATH=/atlas
 
 # Optional: enable with `docker compose --profile ollama up -d`.
