feat(indexer): claim index jobs using skip locked
Implement polling and job claiming with FOR UPDATE SKIP LOCKED and
update job status timestamps for worker processing.

Closes #5

--- a/src/Codex.Indexer/appsettings.json
+++ b/src/Codex.Indexer/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=codex;Username=codex;Password=codex"
+  },
+  "Codex": {
+    "DocsRoot": "/atlas",
+    "Indexer": {
+      "PollIntervalSeconds": 2
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
