--- a/src/Codex.Indexer/Codex.Indexer.csproj
+++ b/src/Codex.Indexer/Codex.Indexer.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.3" />
+    <PackageReference Include="Npgsql" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
